# player

./: .gitignore  .localvimrc  CMakeLists.txt  README.md  cast_control.c  cast_control.h  cast_message.h  cli.c  cli.h  main.c  media.h  messages.h  tls.c  tls.h
proto/: generate-proto.sh
